--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tinymaps</title>
-</head>
-<body>
-    <h1>Welcome to tinymaps</h1>
-</body>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
