--- a/public/basic/index.html
+++ b/public/basic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tinymaps - Basic example</title>
-    <link rel="stylesheet" href="../dist/style.css">
+    <link rel="stylesheet" href="https://pcmill.github.io/tinymaps/style.css">
     <style>
         #map {
             width: 500px;
@@ -16,7 +16,7 @@
     <div id="map"></div>
 
     <script type="module">
-        import { Map, LatLon, TileLayer, Pan, Zoom } from '../dist/tinymaps.es.js';
+        import { Map, LatLon, TileLayer, Pan, Zoom } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
 
         const map = new Map({
             elementId: 'map',
