--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to tinymaps</h1>
 
-    <a href="/basic">Basic example</a>
+    <a href="basic">Basic example</a>
     <a href="https://github.com/pcmill/tinymaps">Github repository</a>
 </body>
 </html>
