--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="map"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/develop.ts"></script>
   </body>
 </html>
