--- a/public/basic/index.html
+++ b/public/basic/index.html
@@ -38,6 +38,23 @@
         
         const zoom = new Zoom();
         map.attach(zoom);
+
+        const markers = new MarkerLayer({
+            id: 'markers',
+            markers: [
+                {
+                    center: new LatLon(52.0906, 5.1213),
+                }, 
+                {
+                    center: new LatLon(48.858, 2.294),
+                },
+                {
+                    center: new LatLon(50.8478, 4.3601),
+                }
+            ]
+        });
+        
+        map.add(markers);
     </script>
 </body>
 </html>
