--- a/public/basic/index.html
+++ b/public/basic/index.html
@@ -16,7 +16,7 @@
     <div id="map"></div>
 
     <script type="module">
-        import { Map, LatLon, TileLayer, Pan, Zoom } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
+        import { Map, LatLon, TileLayer, MarkerLayer, Pan, Zoom } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
 
         const map = new Map({
             elementId: 'map',
