--- a/index.html
+++ b/index.html
@@ -1,13 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tinymaps</title>
   </head>
   <body>
-    <div id="map"></div>
+    <main>
+      <h1>Tinymaps examples</h1>
+
+      <h2>Interactive map</h2>
+      <div class="map" id="mapInteractive"></div>
+
+      <h2>Static map</h2>
+      <div class="map" id="mapStatic"></div>
+    </main>
+
     <script type="module" src="./src/develop.ts"></script>
+
+    <style>
+      body {
+        font-family: Bahnschrift, "DIN Alternate", "Franklin Gothic Medium",
+          "Nimbus Sans Narrow", sans-serif-condensed, sans-serif;
+        font-weight: normal;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        max-width: 900px;
+        width: 100%;
+        margin: 0 auto;
+      }
+
+      main h1 {
+        text-transform: uppercase;
+        margin: 2rem 0 1rem 0;
+      }
+
+      main h2 {
+        font-family: Superclarendon, "Bookman Old Style", "URW Bookman",
+          "URW Bookman L", "Georgia Pro", Georgia, serif;
+        font-weight: normal;
+        margin: 1rem 0 0.5rem 0;
+      }
+
+      .map {
+        width: 100%;
+        height: 500px;
+        border-radius: 5px;
+      }
+
+      .map {
+        display: flex;
+        background-color: #ccc;
+        overflow: hidden;
+        position: relative;
+        touch-action: none;
+      }
+
+      .map > canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .map > .attribution {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 0.4rem 0.6rem;
+        font-family: sans-serif;
+        font-size: 0.8rem;
+        background-color: white;
+        color: #333;
+        border-radius: 0.8rem 0 0 0;
+        opacity: 0.85;
+      }
+
+      .map > .attribution > a {
+        color: #333;
+      }
+    </style>
   </body>
 </html>
