--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tinymaps</title>
   </head>
@@ -119,10 +119,13 @@
 
       main h2,
       main p {
-        font-family: Superclarendon, "Bookman Old Style", "URW Bookman",
-          "URW Bookman L", "Georgia Pro", Georgia, serif;
+        font-family: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
         font-weight: normal;
         margin: 1rem 0 0.5rem 0;
+      }
+
+      main p {
+        font-size: 1.2rem;
       }
 
       main a {
