Add image layer and bounding box.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
       <h2>Static map</h2>
       <div class="map" id="mapStatic"></div>
+
+      <h2>Image map</h2>
+      <div class="map" id="mapImage"></div>
+
+      <p>Map taken from <a href="https://hetutrechtsarchief.nl/beeld/1A9A48886348537995AE434DAB2E7D43">Het Utrechts Archief</a>, public domain.</p>
     </main>
 
     <script type="module" src="./src/develop.ts"></script>
