--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <script type="module">
-        import { Map, LatLon, TileLayer, MarkerLayer, Pan, Zoom, LineLayer, ImageLayer } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
+        import { Map, LatLon, TileLayer, MarkerLayer, Pan, Zoom, LineLayer, ImageLayer, BoundingBox } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
 
         const mapInteractive = new Map({
             elementId: 'mapInteractive',
