--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
         const pan = new Pan();
         mapInteractive.attach(pan);
-
+        
         const zoom = new Zoom();
         mapInteractive.attach(zoom);
 
@@ -103,9 +103,18 @@
 
         const mapImage = new Map({
             elementId: 'mapImage',
-            center: new LatLon(52.08, 5.12),
+            center: new LatLon(52.09, 5.111),
             zoom: 11,
         });
+
+        const imageTilelayer = new TileLayer({
+            id: 'tiles',
+            tileSize: 256,
+            tileUrl: 'https://tile.openstreetmap.org/{z}/{x}/{y}.png',
+            attribution: '© <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
+        });
+
+        mapImage.add(imageTilelayer);
 
         const imageLayer = new ImageLayer({
             id: 'image',
@@ -117,10 +126,13 @@
             )
         });
 
-        mapImage.add(tilelayer);
         mapImage.add(imageLayer);
-        mapImage.attach(pan);
-        mapImage.attach(zoom);
+
+        const imagePan = new Pan();
+        mapImage.attach(imagePan);
+
+        const imageZoom = new Zoom();
+        mapImage.attach(imageZoom);
     </script>
 
     <style>
