Add layergroup, adjust API for Marker.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       }
 
       main h2 {
-        font-family: Superclarendon, "Bookman Old Style", "URW Bookman",
-          "URW Bookman L", "Georgia Pro", Georgia, serif;
+        font-family: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
         font-weight: normal;
         margin: 1rem 0 0.5rem 0;
       }
