--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <script type="module">
-        import { Map, LatLon, TileLayer, MarkerLayer, Pan, Zoom, LineLayer, ImageLayer, BoundingBox } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
+        import { Map, LatLon, TileLayer, LayerGroup, MarkerLayer, Pan, Zoom, LineLayer, ImageLayer, BoundingBox } from 'https://pcmill.github.io/tinymaps/tinymaps.es.js';
 
         const mapInteractive = new Map({
             elementId: 'mapInteractive',
@@ -69,22 +69,39 @@
 
         mapInteractive.add(coordinates);
 
-        const markers = new MarkerLayer({
-            id: 'markers',
-            markers: [
-                {
-                    center: new LatLon(52.0906, 5.1213),
-                },
-                {
-                    center: new LatLon(48.858, 2.294),
-                },
-                {
-                    center: new LatLon(50.8478, 4.3601),
-                }
-            ]
+        const utrechtMarker = new MarkerLayer({
+            id: 'marker1',
+            center: new LatLon(52.0906, 5.1213),
+            options: {
+                radius: '10px',
+                fillColor: 'darkblue',
+                borderColor: 'white',
+            }
         });
 
-        mapInteractive.add(markers);
+        const brusselsMarker = new MarkerLayer({
+            id: 'marker2',
+            center: new LatLon(50.8478, 4.3601),
+            options: {
+                radius: '10px',
+                fillColor: 'red',
+                borderColor: 'white',
+            }
+        });
+        
+        const parisMarker = new MarkerLayer({
+            id: 'marker3',
+            center: new LatLon(48.858, 2.294),
+        });
+
+        const markerGroup = new LayerGroup();
+
+        markerGroup.addLayer(utrechtMarker);
+        mapInteractive.add(utrechtMarker);
+        markerGroup.addLayer(brusselsMarker);
+        mapInteractive.add(brusselsMarker);
+        markerGroup.addLayer(parisMarker);
+        mapInteractive.add(parisMarker);
 
         const mapStatic = new Map({
             elementId: 'mapStatic',
