--- a/index.html
+++ b/index.html
@@ -51,31 +51,18 @@
       }
 
       .map {
+        display: flex;
         width: 100%;
         height: 500px;
         border-radius: 5px;
-      }
-
-      .map {
-        display: flex;
         background-color: #ccc;
         overflow: hidden;
-        position: relative;
         touch-action: none;
       }
 
-      .map > canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-
       .map > .attribution {
-        position: absolute;
-        bottom: 0;
-        right: 0;
         padding: 0.4rem 0.6rem;
-        font-family: sans-serif;
+        font-family: system-ui;
         font-size: 0.8rem;
         background-color: white;
         color: #333;
