--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
 
         .map > .attribution {
             padding: 0.4rem 0.6rem;
-            font-family: sans-serif;
+            font-family: system-ui;
             font-size: 0.8rem;
             background-color: white;
             color: #333;
